--- a/app/globals.css
+++ b/app/globals.css
@@ -18,6 +18,8 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  overflow-y: 'scroll'
+
 }
 
 @layer utilities {
